# Randy

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  RandyConfig.h.in  format.sh
include/: phone.hpp  version.hpp
src/: CMakeLists.txt  phone.cpp  randy.cpp  version.cpp
